rename github + npm

--- a/apps/client/.env
+++ b/apps/client/.env
@@ -8,9 +8,9 @@ MYSQL_PORT="3306"
 
 # Client
 NEXT_PUBLIC_CDN_ENDPOINT="localhost:9999"
-NEXT_PUBLIC_DEFAULT_HOST="host.thewired.space"
+NEXT_PUBLIC_DEFAULT_HOST="host.unavi.xyz"
 NEXT_PUBLIC_DOCS_URL="http://localhost:3100"
-NEXT_PUBLIC_DEPLOYED_URL="https://www.thewired.space"
+NEXT_PUBLIC_DEPLOYED_URL="https://www.unavi.xyz"
 NEXT_PUBLIC_HAS_DATABASE="true"
 NEXT_PUBLIC_HAS_S3="true"
 
