--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -28,10 +28,10 @@
     "@radix-ui/react-tooltip": "^1.0.5",
     "@rainbow-me/rainbowkit": "^0.12.8",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.9",
-    "@wired-labs/behave-graph-core": "^0.9.19",
-    "@wired-labs/gltf-extensions": "*",
-    "@wired-labs/protocol": "*",
-    "@wired-labs/react-client": "*",
+    "@unavi/behave-graph-core": "^0.9.20",
+    "@unavi/gltf-extensions": "*",
+    "@unavi/protocol": "*",
+    "@unavi/react-client": "*",
     "boring-avatars": "^1.7.0",
     "contracts": "*",
     "engine": "*",
