--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -15,8 +15,8 @@
     "@gltf-transform/extensions": "3.1.7",
     "@gltf-transform/functions": "3.2.0",
     "@pixiv/three-vrm": "^1.0.9",
-    "@wired-labs/behave-graph-core": "^0.9.19",
-    "@wired-labs/gltf-extensions": "*",
+    "@unavi/behave-graph-core": "^0.9.20",
+    "@unavi/gltf-extensions": "*",
     "nanoid": "^4.0.2",
     "property-graph": "^1.1.0",
     "three": "^0.149.0",
