--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -7,15 +7,15 @@
   "scripts": {
     "build": "tsup src/server.ts --format esm --dts",
     "dev": "concurrently \"yarn build -- --watch\" \"nodemon ./dist/server.js\"",
-    "docker:build": "yarn docker:clean || cd ../.. && docker build -t ghcr.io/wired-labs/host -f apps/host/Dockerfile .",
-    "docker:clean": "yarn docker:stop || docker rmi ghcr.io/wired-labs/host",
-    "docker:start": "yarn docker:stop || docker run --rm -e RTC_MIN_PORT=20000 -e RTC_MAX_PORT=20020 -e MEDIASOUP_ANNOUNCED_IP=127.0.0.1 -p 4000:4000 -p 20000-20020:20000-20020/tcp -p 20000-20020:20000-20020/udp --name wired-host ghcr.io/wired-labs/host",
+    "docker:build": "yarn docker:clean || cd ../.. && docker build -t ghcr.io/unavi-xyz/host -f apps/host/Dockerfile .",
+    "docker:clean": "yarn docker:stop || docker rmi ghcr.io/unavi-xyz/host",
+    "docker:start": "yarn docker:stop || docker run --rm -e RTC_MIN_PORT=20000 -e RTC_MAX_PORT=20020 -e MEDIASOUP_ANNOUNCED_IP=127.0.0.1 -p 4000:4000 -p 20000-20020:20000-20020/tcp -p 20000-20020:20000-20020/udp --name wired-host ghcr.io/unavi-xyz/host",
     "docker:stop": "docker stop wired-host",
     "lint": "cd ../.. && eslint --fix apps/host --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore",
     "start": "node --experimental-specifier-resolution=node ./build/server.js"
   },
   "dependencies": {
-    "@wired-labs/protocol": "*",
+    "@unavi/protocol": "*",
     "mediasoup": "^3.11.22",
     "nanoid": "^4.0.2",
     "uWebSockets.js": "uNetworking/uWebSockets.js#v20.20.0",
