--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@wired-labs/protocol",
+  "name": "@unavi/protocol",
   "version": "0.3.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/wired-labs/wired.git",
+    "url": "https://github.com/unavi-xyz/wired.git",
     "directory": "packages/protocol"
   },
   "license": "GPL-3.0-or-later",
