--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@wired-labs/react-client",
+  "name": "@unavi/react-client",
   "version": "0.5.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/wired-labs/wired.git",
+    "url": "https://github.com/unavi-xyz/wired.git",
     "directory": "packages/react-client"
   },
   "license": "GPL-3.0-or-later",
@@ -16,7 +16,7 @@
     "lint": "cd ../.. && eslint --fix packages/react-client --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore"
   },
   "dependencies": {
-    "@wired-labs/protocol": "*",
+    "@unavi/protocol": "*",
     "contracts": "*",
     "engine": "*",
     "ethers": "^5.7.2",
