--- a/apps/client/.env
+++ b/apps/client/.env
@@ -9,7 +9,7 @@ MYSQL_PORT="3306"
 # Client
 NEXT_PUBLIC_CDN_ENDPOINT="localhost:9999"
 NEXT_PUBLIC_DEFAULT_HOST="host.unavi.xyz"
-NEXT_PUBLIC_DOCS_URL="http://localhost:3100"
+NEXT_PUBLIC_DOCS_URL="https://docs.unavi.xyz"
 NEXT_PUBLIC_DEPLOYED_URL="https://www.unavi.xyz"
 NEXT_PUBLIC_HAS_DATABASE="true"
 NEXT_PUBLIC_HAS_S3="true"
