--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -3,7 +3,7 @@
   "version": "0.5.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/unavi-xyz/wired.git",
+    "url": "https://github.com/unavi-xyz/unavi.git",
     "directory": "packages/react-client"
   },
   "license": "GPL-3.0-or-later",
