--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -68,6 +68,7 @@
     "prisma": "^4.12.0",
     "tailwindcss": "^3.2.7",
     "tsconfig": "*",
-    "typescript": "~5.0.4"
+    "typescript": "~5.0.4",
+    "webpack": "^5.79.0"
   }
 }
