migrate to the wired protocol

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -30,8 +30,8 @@
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.9",
     "@unavi/behave-graph-core": "^0.9.20",
     "@unavi/gltf-extensions": "*",
-    "@unavi/protocol": "*",
     "@unavi/react-client": "*",
+    "@wired-protocol/types": "^0.0.11",
     "boring-avatars": "^1.7.0",
     "contracts": "*",
     "engine": "*",
