--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -16,7 +16,7 @@
     "lint": "cd ../.. && eslint --fix packages/react-client --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore"
   },
   "dependencies": {
-    "@unavi/protocol": "*",
+    "@wired-protocol/types": "^0.0.11",
     "contracts": "*",
     "engine": "*",
     "ethers": "^5.7.2",
