--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -29,12 +29,12 @@
     "@rainbow-me/rainbowkit": "^0.12.8",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.9",
     "@unavi/behave-graph-core": "^0.9.20",
-    "@unavi/gltf-extensions": "*",
-    "@unavi/react-client": "*",
+    "@unavi/gltf-extensions": "workspace:*",
+    "@unavi/react-client": "workspace:*",
     "@wired-protocol/types": "^0.0.11",
     "boring-avatars": "^1.7.0",
-    "contracts": "*",
-    "engine": "*",
+    "contracts": "workspace:*",
+    "engine": "workspace:*",
     "ethers": "^5.7.2",
     "mediasoup-client": "^3.6.84",
     "meshoptimizer": "^0.18.1",
@@ -63,11 +63,11 @@
     "@types/sharp": "^0.31.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
-    "eslint-config-custom": "*",
+    "eslint-config-custom": "workspace:*",
     "postcss": "^8.4.21",
     "prisma": "^4.12.0",
     "tailwindcss": "^3.2.7",
-    "tsconfig": "*",
+    "tsconfig": "workspace:*",
     "typescript": "~5.0.4",
     "webpack": "^5.79.0"
   }
