--- a/.prettierignore
+++ b/.prettierignore
@@ -2,6 +2,7 @@
 node_modules
 .pnp
 .pnp.js
+pnpm-lock.yaml
 
 # build
 build/
@@ -19,12 +20,6 @@ out/
 # misc
 .DS_Store
 *.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
 .env.local
