--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -6,10 +6,10 @@
   "type": "module",
   "scripts": {
     "build": "tsup src/server.ts --format esm --dts",
-    "dev": "concurrently \"yarn build -- --watch\" \"nodemon ./dist/server.js\"",
-    "docker:build": "yarn docker:clean || cd ../.. && docker build -t ghcr.io/unavi-xyz/host -f apps/host/Dockerfile .",
-    "docker:clean": "yarn docker:stop || docker rmi ghcr.io/unavi-xyz/host",
-    "docker:start": "yarn docker:stop || docker run --rm -e RTC_MIN_PORT=20000 -e RTC_MAX_PORT=20020 -e MEDIASOUP_ANNOUNCED_IP=127.0.0.1 -p 4000:4000 -p 20000-20020:20000-20020/tcp -p 20000-20020:20000-20020/udp --name wired-host ghcr.io/unavi-xyz/host",
+    "dev": "concurrently \"pnpm build -- --watch\" \"nodemon ./dist/server.js\"",
+    "docker:build": "pnpm docker:clean || cd ../.. && docker build -t ghcr.io/unavi-xyz/host -f apps/host/Dockerfile .",
+    "docker:clean": "pnpm docker:stop || docker rmi ghcr.io/unavi-xyz/host",
+    "docker:start": "pnpm docker:stop || docker run --rm -e RTC_MIN_PORT=20000 -e RTC_MAX_PORT=20020 -e MEDIASOUP_ANNOUNCED_IP=127.0.0.1 -p 4000:4000 -p 20000-20020:20000-20020/tcp -p 20000-20020:20000-20020/udp --name wired-host ghcr.io/unavi-xyz/host",
     "docker:stop": "docker stop wired-host",
     "lint": "cd ../.. && eslint --fix apps/host --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore",
     "start": "node --experimental-specifier-resolution=node ./build/server.js"
@@ -25,9 +25,9 @@
     "@types/node": "^18.15.11",
     "concurrently": "^8.0.1",
     "eslint": "^8.36.0",
-    "eslint-config-custom": "*",
+    "eslint-config-custom": "workspace:*",
     "nodemon": "^2.0.22",
-    "tsconfig": "*",
+    "tsconfig": "workspace:*",
     "tsup": "^6.7.0",
     "typescript": "~5.0.4"
   }
