--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -12,13 +12,14 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --format esm --dts --onSuccess \"tsc --emitDeclarationOnly\"",
-    "dev": "yarn build -- --watch",
+    "dev": "pnpm build -- --watch",
     "lint": "cd ../.. && eslint --fix packages/react-client --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore"
   },
   "dependencies": {
     "@wired-protocol/types": "^0.0.11",
-    "contracts": "*",
-    "engine": "*",
+    "@unavi/gltf-extensions": "workspace:*",
+    "contracts": "workspace:*",
+    "engine": "workspace:*",
     "ethers": "^5.7.2",
     "mediasoup-client": "^3.6.84",
     "nanoid": "^4.0.2"
@@ -26,7 +27,9 @@
   "devDependencies": {
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
-    "tsconfig": "*",
+    "tsconfig": "workspace:*",
+    "eslint": "^8.36.0",
+    "eslint-config-custom": "workspace:*",
     "tsup": "^6.7.0",
     "typescript": "~5.0.4"
   },
