--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -16,20 +16,22 @@
     "lint": "cd ../.. && eslint --fix packages/react-client --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore"
   },
   "dependencies": {
-    "@wired-protocol/types": "^0.0.11",
     "@unavi/gltf-extensions": "workspace:*",
+    "@wired-protocol/types": "^0.0.11",
     "contracts": "workspace:*",
     "engine": "workspace:*",
     "ethers": "^5.7.2",
     "mediasoup-client": "^3.6.84",
-    "nanoid": "^4.0.2"
+    "nanoid": "^4.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.35",
+    "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
-    "tsconfig": "workspace:*",
-    "eslint": "^8.36.0",
+    "eslint": "^8.38.0",
     "eslint-config-custom": "workspace:*",
+    "tsconfig": "workspace:*",
     "tsup": "^6.7.0",
     "typescript": "~5.0.4"
   },
