--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
       "@aws-sdk/util-user-agent-node@3.282.0": "patches/@aws-sdk__util-user-agent-node@3.282.0.patch",
       "@walletconnect/keyvaluestorage@1.0.2": "patches/@walletconnect__keyvaluestorage@1.0.2.patch",
       "node-fetch@2.6.7": "patches/node-fetch@2.6.7.patch",
-      "pino@7.11.0": "patches/pino@7.11.0.patch"
+      "pino@7.11.0": "patches/pino@7.11.0.patch",
+      "debug@4.3.4": "patches/debug@4.3.4.patch"
     }
   }
 }
