fix docker builds

--- a/apps/client/Dockerfile
+++ b/apps/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:alpine AS builder
+FROM node:18-alpine AS builder
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
 RUN apk update
@@ -6,18 +6,25 @@ RUN apk update
 # Set working directory
 WORKDIR /app
 
-# Prune the repo to only include files needed for the build
-RUN pnpm global add turbo
+# Install global dependencies
+RUN npm i -g npm@latest; \
+ npm install -g pnpm turbo
+
+# Prune files
 COPY . .
 RUN turbo prune --scope=client --docker
 
 # Add lockfile and package.json's of isolated subworkspace
-FROM node:alpine AS installer
+FROM node:18-alpine AS installer
 RUN apk add --no-cache libc6-compat git
 RUN apk update
 WORKDIR /app
 
-# First install the dependencies (as they change less often)
+# Install global dependencies
+RUN npm i -g npm@latest; \
+ npm install -g pnpm turbo
+
+# Install NPM dependencies
 COPY .gitignore .gitignore
 COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
@@ -40,7 +47,7 @@ COPY turbo.json turbo.json
 
 RUN pnpm turbo run build --filter=client...
 
-FROM node:alpine AS runner
+FROM node:18-alpine AS runner
 WORKDIR /app
 
 # Don't run production as root
@@ -51,11 +58,11 @@ USER nextjs
 COPY --from=installer /app/apps/client/next.config.mjs .
 COPY --from=installer /app/apps/client/package.json .
 
-# Automatically leverage output traces to reduce image size
-# https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=installer --chown=nextjs:nodejs /app/apps/client/.next/standalone ./
-COPY --from=installer --chown=nextjs:nodejs /app/apps/client/.next/static ./apps/client/.next/static
-COPY --from=installer --chown=nextjs:nodejs /app/apps/client/public ./apps/client/public
+# # Automatically leverage output traces to reduce image size
+# # https://nextjs.org/docs/advanced-features/output-file-tracing
+# COPY --from=installer --chown=nextjs:nodejs /app/apps/client/.next/standalone ./
+# COPY --from=installer --chown=nextjs:nodejs /app/apps/client/.next/static ./apps/client/.next/static
+# COPY --from=installer --chown=nextjs:nodejs /app/apps/client/public ./apps/client/public
 
 ENV NODE_ENV=production
 
