--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "deploy": "turbo deploy",
     "dev": "turbo dev --filter=!tsconfig --filter=!eslint-config-custom --filter=!contracts --filter=!engine",
     "docker:build": "dotenv -e ./apps/client/.env -c -- docker compose -f docker-compose.yml -f docker-compose.prod.yml build",
-    "docker:dev": "pnpm docker:stop && dotenv -e ./apps/client/.env -c -- docker compose up --build -d && pnpm deploy && pnpm dev",
-    "docker:prod": "pnpm docker:stop && dotenv -e ./apps/client/.env -c -- docker compose -f docker-compose.yml -f docker-compose.prod.yml up --build -d && pnpm deploy",
+    "docker:dev": "pnpm docker:stop && dotenv -e ./apps/client/.env -c -- docker compose up --build -d && pnpm run deploy && pnpm dev",
+    "docker:prod": "pnpm docker:stop && dotenv -e ./apps/client/.env -c -- docker compose -f docker-compose.yml -f docker-compose.prod.yml up --build -d && pnpm run deploy",
     "docker:stop": "dotenv -e ./apps/client/.env -c -- docker compose -f docker-compose.yml -f docker-compose.prod.yml down",
     "format": "prettier --write .",
     "generate": "turbo generate",
