--- a/apps/client/.env
+++ b/apps/client/.env
@@ -7,6 +7,7 @@ MYSQL_ROOT_PASSWORD="passworddb"
 MYSQL_PORT="3306"
 
 # Client
+NEXT_PUBLIC_CDN_ENDPOINT="${S3_ENDPOINT}/${S3_BUCKET}"
 NEXT_PUBLIC_DEFAULT_HOST="host.unavi.xyz"
 NEXT_PUBLIC_DOCS_URL="https://docs.unavi.xyz"
 NEXT_PUBLIC_DEPLOYED_URL="https://www.unavi.xyz"
@@ -30,4 +31,4 @@ S3_BUCKET="wired"
 S3_REGION="us-east-1"
 S3_SECRET="secret_key"
 S3_PORT="9000"
-S3_ENDPOINT="127.0.0.1:${S3_PORT}"
+S3_ENDPOINT="localhost:${S3_PORT}"
