--- a/apps/client/.env
+++ b/apps/client/.env
@@ -31,4 +31,4 @@ S3_BUCKET="wired"
 S3_REGION="us-east-1"
 S3_SECRET="secret_key"
 S3_PORT="9000"
-S3_ENDPOINT="localhost:${S3_PORT}"
+S3_ENDPOINT="127.0.0.1:${S3_PORT}"
