--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint": "turbo lint"
   },
   "dependencies": {
-    "@changesets/cli": "^2.26.1"
+    "@changesets/cli": "^2.26.1",
+    "@wired-protocol/types": "^0.0.14"
   },
   "devDependencies": {
     "dotenv-cli": "^7.2.1",
