--- a/.github/workflows/build-host-main.yml
+++ b/.github/workflows/build-host-main.yml
@@ -1,25 +1,38 @@
-name: Publish Host
+name: Build Host Docker Image
 
 on:
   push:
+    branches:
+      - main
+    paths:
+      - .github/workflows/build-host-main.yml
+      - apps/host/src/**/*
+      - apps/host/Dockerfile
+      - apps/host/package.json
     tags:
       - "host@*.*.*"
+  pull_request:
+    branches:
+      - main
+    paths:
+      - .github/workflows/build-host-main.yml
+      - apps/host/src/**/*
+      - apps/host/Dockerfile
+      - apps/host/package.json
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: unavi-xyz/host
 
 jobs:
-  build-and-push-image:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Log in to the Container registry
+      - name: Log in to the container registry
+        if: github.event_name == 'push'
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -33,14 +46,25 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           labels: |
             org.opencontainers.image.description=Host server for The Wired
+          flavor: |
+            latest=false
           tags: |
+            type=edge
             type=match,pattern=\d.\d.\d
+            type=sha
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./apps/host/Dockerfile
-          push: true
+          file: apps/host/Dockerfile
+          push: github.event_name == 'push'
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      uses: ./.github/workflows/deploy-host-main.yml
