--- a/.github/workflows/build-host-dev.yml
+++ b/.github/workflows/build-host-dev.yml
@@ -64,4 +64,5 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Call deploy workflow
       uses: ./.github/workflows/deploy-host-dev.yml
