--- a/.github/workflows/build-host-dev.yml
+++ b/.github/workflows/build-host-dev.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Log in to the container registry
-        if: github.event_name == 'push'
+        if: ${{ github.event_name == 'push' }}
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -55,7 +55,7 @@ jobs:
         with:
           context: .
           file: apps/host/Dockerfile
-          push: github.event_name == 'push'
+          push: ${{ github.event_name == 'push' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
