--- a/.github/workflows/build-host-dev.yml
+++ b/.github/workflows/build-host-dev.yml
@@ -64,5 +64,11 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Call deploy workflow
-        uses: ./.github/workflows/deploy-host-dev.yml
+      - name: SSH remote commands
+        if: ${{ github.event_name == 'push' }}
+        uses: appleboy/ssh-action@v0.1.5
+        with:
+          host: ${{ secrets.DEVHOST_HOST }}
+          username: ${{ secrets.DEVHOST_USERNAME }}
+          key: ${{ secrets.DEVHOST_KEY }}
+          script: sh /home/deploy.sh
