remove next-auth env vars

--- a/apps/client/.env
+++ b/apps/client/.env
@@ -8,9 +8,9 @@ MYSQL_PORT="3306"
 
 # Client
 NEXT_PUBLIC_CDN_ENDPOINT="${S3_ENDPOINT}/${S3_BUCKET}"
-NEXT_PUBLIC_DEFAULT_HOST="host.unavi.xyz"
+NEXT_PUBLIC_DEFAULT_HOST="localhost:4000"
 NEXT_PUBLIC_DOCS_URL="https://docs.unavi.xyz"
-NEXT_PUBLIC_DEPLOYED_URL="https://www.unavi.xyz"
+NEXT_PUBLIC_DEPLOYED_URL="http://localhost:3000"
 NEXT_PUBLIC_HAS_DATABASE="true"
 NEXT_PUBLIC_HAS_S3="true"
 
@@ -19,9 +19,6 @@ NEXT_PUBLIC_CRYPTOAVATARS_API_KEY=""
 
 DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@localhost:${MYSQL_PORT}/${MYSQL_DATABASE}"
 DISABLE_PWA="true"
-
-NEXTAUTH_SECRET="123456789"
-NEXTAUTH_URL="http://localhost:3000"
 
 # Replace with your own provider
 ETH_PROVIDER="https://eth-sepolia.g.alchemy.com/v2/9x4LwZa7dvHtTt6EkgOAPOUngvfFIYJQ"
