--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -19,6 +19,7 @@
     "@gltf-transform/extensions": "3.1.7",
     "@gltf-transform/functions": "3.2.0",
     "@lucia-auth/adapter-prisma": "^2.0.0",
+    "@lucia-auth/oauth": "^1.0.1",
     "@prisma/client": "^4.13.0",
     "@radix-ui/react-context-menu": "^2.1.3",
     "@radix-ui/react-dialog": "^1.0.3",
