--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -4,7 +4,12 @@
     "paths": {
       "@/*": ["./*"]
     },
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     ".next/types/**/*.ts",
