--- a/package.json
+++ b/package.json
@@ -17,32 +17,20 @@
     "generate": "turbo generate",
     "lint": "turbo lint"
   },
-  "dependencies": {
-    "@changesets/cli": "^2.26.1"
-  },
   "devDependencies": {
+    "@changesets/cli": "^2.26.1",
     "dotenv-cli": "^7.2.1",
-    "eslint": "^8.38.0",
+    "eslint": "^8.42.0",
     "eslint-config-custom": "workspace:*",
     "postinstall-postinstall": "^2.1.0",
-    "prettier": "^2.8.7",
+    "prettier": "^2.8.8",
     "prettier-plugin-packagejson": "^2.4.3",
-    "prettier-plugin-prisma": "^4.12.0",
-    "turbo": "^1.9.3"
+    "prettier-plugin-prisma": "^4.13.0",
+    "turbo": "^1.10.3"
   },
   "packageManager": "pnpm@8.3.1",
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=7.0.0"
-  },
-  "pnpm": {
-    "patchedDependencies": {
-      "@aws-sdk/signature-v4-multi-region@3.282.0": "patches/@aws-sdk__signature-v4-multi-region@3.282.0.patch",
-      "@aws-sdk/util-user-agent-node@3.282.0": "patches/@aws-sdk__util-user-agent-node@3.282.0.patch",
-      "@walletconnect/keyvaluestorage@1.0.2": "patches/@walletconnect__keyvaluestorage@1.0.2.patch",
-      "node-fetch@2.6.7": "patches/node-fetch@2.6.7.patch",
-      "pino@7.11.0": "patches/pino@7.11.0.patch",
-      "debug@4.3.4": "patches/debug@4.3.4.patch"
-    }
   }
 }
