upgrade to wagmi v1

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -28,14 +28,13 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
-    "@rainbow-me/rainbowkit": "^0.12.14",
+    "@rainbow-me/rainbowkit": "^1.0.1",
     "@t3-oss/env-nextjs": "^0.2.2",
     "@unavi/behave-graph-core": "^0.9.20",
     "@unavi/gltf-extensions": "workspace:*",
     "@unavi/react-client": "workspace:*",
     "@wired-protocol/types": "^0.0.20",
     "boring-avatars": "^1.10.0",
-    "contracts": "workspace:*",
     "engine": "workspace:*",
     "ethers": "^5.7.2",
     "lucia-auth": "^1.8.0",
@@ -52,7 +51,8 @@
     "sharp": "^0.32.1",
     "siwe": "^2.1.4",
     "swr": "^2.1.5",
-    "wagmi": "^0.12.13",
+    "viem": "^1.0.5",
+    "wagmi": "^1.1.1",
     "zod": "^3.21.4",
     "zustand": "^4.3.8"
   },
