--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "turbo build",
     "ci:publish": "pnpm publish -r && changeset tag && git push --follow-tags",
     "deploy": "turbo deploy",
-    "dev": "turbo dev --filter=!tsconfig --filter=!eslint-config-custom --filter=!contracts --filter=!engine",
+    "dev": "turbo dev --filter=!tsconfig --filter=!eslint-config-custom --filter=!engine",
     "docker:build": "dotenv -e ./apps/client/.env -c -- docker compose -f docker-compose.yml -f docker-compose.prod.yml build",
     "docker:dev": "pnpm docker:stop && dotenv -e ./apps/client/.env -c -- docker compose up --build -d && pnpm docker:init && pnpm dev",
     "docker:init": "node -e \"setTimeout(() => process.exit(0), 10000)\" && pnpm run deploy",
