--- a/package.json
+++ b/package.json
@@ -32,5 +32,13 @@
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=7.0.0"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@aws-sdk/signature-v4-multi-region@3.282.0": "patches/@aws-sdk__signature-v4-multi-region@3.282.0.patch",
+      "@aws-sdk/util-user-agent-node@3.282.0": "patches/@aws-sdk__util-user-agent-node@3.282.0.patch",
+      "node-fetch@2.6.11": "patches/node-fetch@2.6.11.patch",
+      "debug@4.3.4": "patches/debug@4.3.4.patch"
+    }
   }
 }
