--- a/packages/gltf-extensions/tsconfig.json
+++ b/packages/gltf-extensions/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "./dist",
     "composite": false,
-    "incremental": false
+    "incremental": false,
+    "outDir": "./dist",
+    "rootDir": "./src"
   },
   "extends": "tsconfig/base.json",
   "include": ["src"]
