migrate from prisma -> drizzle

--- a/apps/client/.env
+++ b/apps/client/.env
@@ -17,6 +17,7 @@ NEXT_PUBLIC_HAS_S3="true"
 # Remove the "$2b$10$" from the start of you API key
 NEXT_PUBLIC_CRYPTOAVATARS_API_KEY=""
 
+PLANETSCALE="false"
 DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@localhost:${MYSQL_PORT}/${MYSQL_DATABASE}"
 DISABLE_PWA="true"
 
