--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -5,9 +5,8 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "build": "next build",
-    "deploy": "dotenv -c -- prisma db push --accept-data-loss",
+    "db:push": "dotenv -c -- drizzle-kit push:mysql",
     "dev": "next dev",
-    "generate": "prisma generate",
     "lint": "eslint --fix . --ext .ts,.tsx,.mjs,.json --ignore-path ../../.gitignore --ignore-path ../../.prettierignore --ignore-pattern package.json",
     "start": "next start"
   },
@@ -18,9 +17,9 @@
     "@gltf-transform/core": "^3.4.0",
     "@gltf-transform/extensions": "^3.4.0",
     "@gltf-transform/functions": "^3.4.0",
-    "@lucia-auth/adapter-prisma": "^2.0.0",
+    "@lucia-auth/adapter-mysql": "^1.1.1",
     "@lucia-auth/oauth": "^1.2.1",
-    "@prisma/client": "^4.15.0",
+    "@planetscale/database": "^1.7.0",
     "@radix-ui/react-context-menu": "^2.1.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -35,8 +34,10 @@
     "@unavi/react-client": "workspace:^",
     "@wired-protocol/types": "^0.0.20",
     "boring-avatars": "^1.10.0",
+    "drizzle-orm": "^0.26.5",
     "ethers": "^5.7.2",
     "lucia-auth": "^1.8.0",
+    "mysql2": "^3.3.5",
     "nanoid": "^4.0.2",
     "next": "^13.4.5",
     "next-axiom": "^0.17.0",
@@ -61,10 +62,10 @@
     "@types/react-dom": "^18.2.4",
     "@types/sharp": "^0.31.1",
     "autoprefixer": "^10.4.14",
+    "drizzle-kit": "^0.18.0",
     "eslint": "^8.42.0",
     "eslint-config-custom": "workspace:^",
     "postcss": "^8.4.24",
-    "prisma": "^4.15.0",
     "tailwindcss": "^3.3.2",
     "tsconfig": "workspace:^",
     "typescript": "~5.1.3",
