--- a/turbo.json
+++ b/turbo.json
@@ -29,7 +29,7 @@
         "S3_ENDPOINT",
         "S3_REGION",
         "S3_SECRET",
-        "SKIP_ENV_VALIDATION",
+        "PLANETSCALE",
         "VERCEL",
         "VERCEL_URL"
       ]
@@ -48,7 +48,6 @@
     },
     "lint": {},
     "generate": { "cache": false },
-    "deploy": { "cache": false },
     "dev": { "cache": false, "persistent": true }
   }
 }
