--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -48,6 +48,7 @@
     "sharp": "^0.32.1",
     "siwe": "^2.1.4",
     "swr": "^2.1.5",
+    "thyseus": "^0.12.1",
     "viem": "^1.0.5",
     "wagmi": "^1.1.1",
     "zod": "^3.21.4",
