--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@changesets/cli": "^2.26.1",
     "dotenv-cli": "^7.2.1",
     "eslint": "^8.42.0",
-    "eslint-config-custom": "workspace:*",
+    "eslint-config-custom": "workspace:^",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.8",
     "prettier-plugin-packagejson": "^2.4.3",
