--- a/apps/client/.env
+++ b/apps/client/.env
@@ -1,6 +1,6 @@
 # Database
 MYSQL_ROOT_HOST= "%"
-MYSQL_DATABASE="wired"
+MYSQL_DATABASE="unavi"
 MYSQL_USER="userdb"
 MYSQL_PASSWORD="passworddb"
 MYSQL_ROOT_PASSWORD="passworddb"
@@ -25,7 +25,7 @@ DISABLE_PWA="true"
 ETH_PROVIDER="https://eth-sepolia.g.alchemy.com/v2/9x4LwZa7dvHtTt6EkgOAPOUngvfFIYJQ"
 
 S3_ACCESS_KEY_ID="access_key"
-S3_BUCKET="wired"
+S3_BUCKET="unavi"
 S3_REGION="us-east-1"
 S3_SECRET="secret_key"
 S3_PORT="9000"
