--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -20,11 +20,12 @@
     "lint": "cd ../.. && eslint --fix packages/react-client --ext .ts,.tsx,.mjs,.json --ignore-path .gitignore --ignore-path .prettierignore --ignore-pattern package.json"
   },
   "dependencies": {
-    "lattice-engine": "^0.2.4",
-    "mediasoup-client": "^3.6.84"
+    "lattice-engine": "^0.3.0",
+    "mediasoup-client": "^3.6.84",
+    "nanoid": "^4.0.2"
   },
   "devDependencies": {
-    "@thyseus/transformer-rollup": "^0.12.0",
+    "@thyseus/transformer-rollup": "^0.13.0",
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
     "eslint": "^8.42.0",
@@ -36,9 +37,8 @@
   },
   "peerDependencies": {
     "@wired-protocol/types": "^0.0.20",
-    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "thyseus": "^0.12.1"
+    "thyseus": "^0.13.0"
   }
 }
