--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.13.0",
+    "@types/node": "^18.16.17",
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
     "eslint": "^8.42.0",
