--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -32,7 +32,8 @@
     "vite-plugin-dts": "^2.3.0"
   },
   "peerDependencies": {
-    "@wired-protocol/types": "^0.0.20",
+    "@wired-protocol/types": "^0.1.0",
+    "gl-matrix": "^4.0.0-beta.1",
     "lattice-engine": "^0.3.1",
     "mediasoup-client": "^3.6.84",
     "nanoid": "^4.0.2",
