--- a/apps/client/.env
+++ b/apps/client/.env
@@ -13,6 +13,7 @@ NEXT_PUBLIC_DOCS_URL="https://docs.unavi.xyz"
 NEXT_PUBLIC_DEPLOYED_URL="http://localhost:3000"
 NEXT_PUBLIC_HAS_DATABASE="true"
 NEXT_PUBLIC_HAS_S3="true"
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=""
 
 # Remove the "$2b$10$" from the start of you API key
 NEXT_PUBLIC_CRYPTOAVATARS_API_KEY=""
