--- a/turbo.json
+++ b/turbo.json
@@ -23,6 +23,7 @@
         "NEXT_PUBLIC_HAS_DATABASE",
         "NEXT_PUBLIC_HAS_GOOGLE_OAUTH",
         "NEXT_PUBLIC_HAS_S3",
+        "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID",
         "NODE_ENV",
         "PLANETSCALE",
         "S3_ACCESS_KEY_ID",
