--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
       "@aws-sdk/signature-v4-multi-region@3.282.0": "patches/@aws-sdk__signature-v4-multi-region@3.282.0.patch",
       "@aws-sdk/util-user-agent-node@3.282.0": "patches/@aws-sdk__util-user-agent-node@3.282.0.patch",
       "node-fetch@2.6.11": "patches/node-fetch@2.6.11.patch",
-      "debug@4.3.4": "patches/debug@4.3.4.patch"
+      "debug@4.3.4": "patches/debug@4.3.4.patch",
+      "pino@7.11.0": "patches/pino@7.11.0.patch",
+      "@walletconnect/keyvaluestorage@1.0.2": "patches/@walletconnect__keyvaluestorage@1.0.2.patch"
     }
   }
 }
