--- a/apps/client/.env
+++ b/apps/client/.env
@@ -13,7 +13,9 @@ NEXT_PUBLIC_DOCS_URL="https://docs.unavi.xyz"
 NEXT_PUBLIC_DEPLOYED_URL="http://localhost:3000"
 NEXT_PUBLIC_HAS_DATABASE="true"
 NEXT_PUBLIC_HAS_S3="true"
-NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=""
+
+# Can get an id for free from https://cloud.walletconnect.com/sign-up
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID="cd68582175a9bbe3317e45f516bc29f7"
 
 # Remove the "$2b$10$" from the start of you API key
 NEXT_PUBLIC_CRYPTOAVATARS_API_KEY=""
