--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -31,8 +31,9 @@
     "@t3-oss/env-nextjs": "^0.6.0",
     "@unavi/behave-graph-core": "^0.9.20",
     "@unavi/gltf-extensions": "workspace:^",
+    "@unavi/protocol": "workspace:^",
     "@unavi/react-client": "workspace:^",
-    "@wired-protocol/types": "^0.3.0",
+    "@wired-protocol/types": "^0.5.0",
     "boring-avatars": "^1.10.1",
     "drizzle-orm": "^0.26.5",
     "ethers": "^5.7.2",
@@ -48,6 +49,7 @@
     "sharp": "^0.32.1",
     "siwe": "^2.1.4",
     "swr": "^2.2.0",
+    "three": "~0.153.0",
     "thyseus": "^0.13.1",
     "viem": "^1.2.9",
     "wagmi": "^1.3.5",
@@ -60,6 +62,7 @@
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
     "@types/sharp": "^0.31.1",
+    "@types/three": "~0.152.1",
     "autoprefixer": "^10.4.14",
     "drizzle-kit": "^0.18.0",
     "eslint": "^8.42.0",
