--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -16,14 +16,14 @@
     "dev": "tsc -w",
     "lint": "cd ../.. && eslint --fix packages/protocol --ext .ts,.tsx,.mjs,.json --ignore-path .gitignore --ignore-path .prettierignore --ignore-pattern package.json"
   },
+  "dependencies": {
+    "@wired-protocol/types": "^0.5.0",
+    "zod": "^3.21.4"
+  },
   "devDependencies": {
     "eslint": "^8.42.0",
     "eslint-config-custom": "workspace:^",
     "tsconfig": "workspace:^",
     "typescript": "~5.1.3"
-  },
-  "peerDependencies": {
-    "@wired-protocol/types": "^0.5.0",
-    "zod": "^3.21.4"
   }
 }
