--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -19,9 +19,6 @@
     "dev": "vite build --watch",
     "lint": "cd ../.. && eslint --fix packages/react-client --ext .ts,.tsx,.mjs,.json --ignore-path .gitignore --ignore-path .prettierignore --ignore-pattern package.json"
   },
-  "dependencies": {
-    "lattice-engine": "^0.3.5"
-  },
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.13.0",
     "@types/node": "^18.16.17",
@@ -39,6 +36,7 @@
     "@unavi/protocol": "workspace:^",
     "@wired-protocol/types": "^0.5.0",
     "gl-matrix": "^4.0.0-beta.1",
+    "lattice-engine": "^0.3.5",
     "mediasoup-client": "^3.6.84",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
