rename react-client -> engine

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -30,13 +30,14 @@
     "@rainbow-me/rainbowkit": "^1.0.4",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@unavi/behave-graph-core": "^0.9.20",
+    "@unavi/engine": "workspace:^",
     "@unavi/gltf-extensions": "workspace:^",
     "@unavi/protocol": "workspace:^",
-    "@unavi/react-client": "workspace:^",
     "@wired-protocol/types": "^0.5.0",
     "boring-avatars": "^1.10.1",
     "drizzle-orm": "^0.26.5",
     "ethers": "^5.7.2",
+    "lattice-engine": "^0.3.10",
     "lucia-auth": "^1.8.0",
     "mysql2": "^3.3.5",
     "nanoid": "^4.0.2",
@@ -50,7 +51,7 @@
     "siwe": "^2.1.4",
     "swr": "^2.2.0",
     "three": "~0.153.0",
-    "thyseus": "^0.13.1",
+    "thyseus": "^0.13.5",
     "viem": "^1.2.9",
     "wagmi": "^1.3.5",
     "zod": "^3.21.4",
