--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -17,8 +17,8 @@
     "@gltf-transform/core": "^3.4.0",
     "@gltf-transform/extensions": "^3.4.0",
     "@gltf-transform/functions": "^3.4.0",
-    "@lucia-auth/adapter-mysql": "^1.1.1",
-    "@lucia-auth/oauth": "^1.2.1",
+    "@lucia-auth/adapter-mysql": "2.0.0-beta.8",
+    "@lucia-auth/oauth": "2.0.0-beta.8",
     "@planetscale/database": "^1.7.0",
     "@radix-ui/react-context-menu": "^2.1.4",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -38,7 +38,7 @@
     "drizzle-orm": "^0.26.5",
     "ethers": "^5.7.2",
     "lattice-engine": "^0.3.12",
-    "lucia-auth": "^1.8.0",
+    "lucia": "2.0.0-beta.7",
     "mysql2": "^3.3.5",
     "nanoid": "^4.0.2",
     "next": "^13.4.8",
