--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -12,15 +12,19 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "pnpm generate && tsc",
+    "clean": "rm -rf src/generated/*",
     "dev": "tsc -w",
+    "generate": "pnpm clean && protoc --ts_out src/generated --proto_path protos protos/**/*.proto",
     "lint": "cd ../.. && eslint --fix packages/protocol --ext .ts,.tsx,.mjs,.json --ignore-path .gitignore --ignore-path .prettierignore --ignore-pattern package.json"
   },
   "dependencies": {
+    "@protobuf-ts/runtime": "^2.9.1",
     "@wired-protocol/types": "^0.5.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@protobuf-ts/plugin": "^2.9.1",
     "eslint": "^8.44.0",
     "eslint-config-custom": "workspace:^",
     "tsconfig": "workspace:^",
