--- a/packages/protocol/tsconfig.json
+++ b/packages/protocol/tsconfig.json
@@ -1,8 +1,12 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "noUncheckedIndexedAccess": false,
+    "noImplicitOverride": false
   },
   "extends": "tsconfig/base.json",
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
