--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.44.0",
     "eslint-config-custom": "workspace:^",
     "mediasoup": "^3.11.24",
+    "mediasoup-client": "^3.6.84",
     "tsconfig": "workspace:^",
     "typescript": "~5.1.3"
   },
