fix protobuf messages

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -10,7 +10,7 @@
   "license": "GPL-3.0-or-later",
   "type": "module",
   "main": "./dist/index.js",
-  "types": "./dist/packages/engine/src/index.d.ts",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
